loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:10: error: value =< is not a member of Int
  if(b =< 2){
       ^Poucet1:16: error: not found: value estSurOrange
  }else if(estSurOrange()){
           ^